# staff-detect

./: CMakeLists.txt  README.md
include/: staff.hh  util.hh
src/: staff.cc  stav.cc  tinyxml2.cc  util.cc
